<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FilterActivity">


        <TextView
            android:id="@+id/f_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/basic_filter"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buss"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:layout_marginTop="18dp" />

            <Spinner
                android:id="@+id/f_buss_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:layout_marginTop="18dp" />

            <Spinner
                android:id="@+id/f__spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:entries="@array/regions_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc_auth"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="10dp"
                android:textSize="18sp"
                android:layout_marginTop="18dp" />

            <Spinner
                android:id="@+id/f__spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/f_rating"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_marginTop="18dp" />

            <Spinner
                android:id="@+id/f__spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:entries="@array/ratings_array" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/f_distance"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:layout_marginTop="18dp" />

            <EditText
                android:id="@+id/f_editdist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:maxLength="5"
                android:hint="@string/any"
                android:inputType="number"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/b_filter"
            android:onClick="onFilterClick"
            android:layout_marginTop="18dp" />


    </LinearLayout>

</ScrollView>
