<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RestaurantDetailsActivity">

        <TextView
            android:id="@+id/name"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_type"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:text="@string/d_type"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/businessType"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_address"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:text="@string/d_address"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/address1"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/address2"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/address3"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/address4"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_post"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:text="@string/d_post"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/post"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/display_date"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            android:text="@string/d_date"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/layout">

            <Button
                android:id="@+id/b_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorPrimary"
                android:onClick="onAddToFav"
                app:layout_constraintEnd_toStartOf="@id/b_rem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/b_rem"
                android:text="@string/rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRemFromFav"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/b_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>